--- a/paginas/accesorios.html
+++ b/paginas/accesorios.html
@@ -36,7 +36,7 @@
                     <div class="offcanvas-body">
                       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active barra-navegacion" aria-current="page"  href="../paginas/accesorios.html">Accesorios</a>
+                              <a class="nav-link active barra-navegacion" aria-current="page"  href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item ">
                               <a class="nav-link barra-navegacion"  href="../paginas/catalogo.html">Catálogo</a>
