--- a/paginas/trabaja con nosotros.html
+++ b/paginas/trabaja con nosotros.html
@@ -35,16 +35,16 @@
                     <div class="offcanvas-body">
                       <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                              <a class="nav-link active barra-navegacion" aria-current="page"  href="../paginas/accesorios.html">Accesorios</a>
+                              <a class="nav-link active barra-navegacion" aria-current="page"  href="../index.html">Inicio</a>
                             </li>
                             <li class="nav-item ">
-                              <a class="nav-link barra-navegacion"  href="../paginas/catalogo.html">Catálogo</a>
+                              <a class="nav-link barra-navegacion"  href="../paginas/accesorios.html">Accesorios</a>
                             </li>
                             <li class="nav-item ">
-                              <a class="nav-link barra-navegacion"   href="../paginas/nosotros.html">Nosotros</a>
+                              <a class="nav-link barra-navegacion"   href="../paginas/catalogo.html">Catálogo</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link barra-navegacion" href="../paginas/trabaja con nosotros.html">Trabaja con Nosotros</a>
+                                <a class="nav-link barra-navegacion" href="../paginas/nosotros.html">Nosotros</a>
                             </li>
                       </ul>
                       <form class="d-flex" role="search">
