--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                   <a class="nav-link barra-navegacion"   href="./paginas/nosotros.html">Nosotros</a>
                                 </li>
                                 <li class="nav-item ">
-                                    <a class="nav-link barra-navegacion" href="./paginas/trabaja con nosotros.html">Trabaja con Nosotros</a>
+                                    <a class="nav-link barra-navegacion" href="./paginas/trabajaconnosotros.html">Trabaja con Nosotros</a>
                                 </li>
                           </ul>
                           <form class="d-flex" role="search">
@@ -82,7 +82,7 @@
                             <a class="nav-link barra-navegacion" href="./paginas/nosotros.html">Nosotros</a>
                         </li>
                           <li class="nav-item">
-                            <a class="nav-link barra-navegacion" href="./paginas/trabaja con nosotros.html">Trabaja con nosotros</a>
+                            <a class="nav-link barra-navegacion" href="./paginas/trabajaconnosotros.html">Trabaja con nosotros</a>
                           </li>
                         </ul>
                         
