--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -44,7 +44,7 @@
                               <a class="nav-link barra-navegacion"   href="../paginas/nosotros.html">Nosotros</a>
                             </li>
                             <li class="nav-item ">
-                                <a class="nav-link barra-navegacion" href="../paginas/trabaja con nosotros.html">Trabaja con Nosotros</a>
+                                <a class="nav-link barra-navegacion" href="../paginas/trabajaconnosotros.html">Trabaja con Nosotros</a>
                             </li>
                       </ul>
                       <form class="d-flex" role="search">
@@ -81,7 +81,7 @@
                     <li> <a class="barra-navegacion-accesorios" href="../index.html" target="_blank">Inicio</a></li>
                     <li> <a class="barra-navegacion-accesorios" href="./accesorios.html" target="_blank"> Accesorios</a></li>  
                     <li> <a class="barra-navegacion-accesorios" href="./nosotros.html" target="_blank"> Nosotros</a></li> 
-                    <li> <a class="barra-navegacion-accesorios" href="./trabaja con nosotros.html" target="_blank"> Trabaja con nosotros</a></li>
+                    <li> <a class="barra-navegacion-accesorios" href="./trabajaconnosotros.html" target="_blank"> Trabaja con nosotros</a></li>
                 </ul>
             </nav>
         </footer>
